--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/aayusharora/API.AI-#readme",
   "dependencies": {
+    "apiai": "^4.0.3",
+    "body-parser": "^1.17.2",
     "express": "^4.15.4"
   }
 }
